--- a/index.html
+++ b/index.html
@@ -481,8 +481,8 @@
                             <i class="fa-solid fa-user nav-icons p-2" id="user"> </i>
                             <div class="link" id="login">
                                 <ul class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="#" class="login-link">Login</a></li>
-                                    <li class="breadcrumb-item text-light"> <a href="#" class="login-link">Sign In</a>
+                                    <li class="breadcrumb-item"><a href="login.html" class="login-link">Login</a></li>
+                                    <li class="breadcrumb-item text-light"> <a href="sign-up.html" class="login-link">Sign In</a>
                                     </li>
                                 </ul>
                             </div>
