--- a/Appliances.html
+++ b/Appliances.html
@@ -321,8 +321,8 @@
                         <i class="fa-solid fa-user nav-icons p-2" id="user"> </i>
                         <div class="link" id="login">
                             <ul class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="#" class="login-link">Login</a></li>
-                                <li class="breadcrumb-item text-light"> <a href="#" class="login-link">Sign In</a>
+                                <li class="breadcrumb-item"><a href="login.html" class="login-link">Login</a></li>
+                                <li class="breadcrumb-item text-light"> <a href="sign-up.html" class="login-link">Sign In</a>
                                 </li>
                             </ul>
                         </div>
@@ -404,11 +404,11 @@
                             <ul>
                                 <li class="footer-list footer-list2"><a href="shop.html" class="footer-link">Shop</a>
                                 </li>
-                                <li class="footer-list"><a href="#top" class="footer-link">Mobile</a></li>
+                                <li class="footer-list"><a href="Mobile.html" class="footer-link">Mobile</a></li>
                                 <li class="footer-list"><a href="Computers.html" class="footer-link">Computers</a></li>
                                 <li class="footer-list"><a href="Accessories.html" class="footer-link">Accessories</a>
                                 </li>
-                                <li class="footer-list"><a href="Appliances.html" class="footer-link">Appliances</a>
+                                <li class="footer-list"><a href="#top" class="footer-link">Appliances</a>
                                 </li>
                                 <li class="footer-list"><a href="contact.html" class="footer-link">Contact</a></li>
                             </ul>
