--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
         }
         .contact-email{
             background-color: transparent;
-            border-radius: 0px;
+            border-radius:0px;
             margin-top: 5px;
         }
         .contact-email:hover{
@@ -315,8 +315,8 @@
                         <i class="fa-solid fa-user nav-icons p-2" id="user"></i>
                         <div class="link" id="login">
                             <ul class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="#" class="login-link">Login</a></li>
-                                <li class="breadcrumb-item text-light"> <a href="#" class="login-link">Sign In</a>
+                                <li class="breadcrumb-item"><a href="login.html" class="login-link">Login</a></li>
+                                <li class="breadcrumb-item text-light"> <a href="sign-up.html" class="login-link">Sign In</a>
                                 </li>
                             </ul>
                         </div>
@@ -381,13 +381,13 @@
                             <ul>
                                 <li class="footer-list footer-list2"><a href="shop.html" class="footer-link">Shop</a>
                                 </li>
-                                <li class="footer-list"><a href="#top" class="footer-link">Mobile</a></li>
+                                <li class="footer-list"><a href="Mobile.html" class="footer-link">Mobile</a></li>
                                 <li class="footer-list"><a href="Computers.html" class="footer-link">Computers</a></li>
                                 <li class="footer-list"><a href="Accessories.html" class="footer-link">Accessories</a>
                                 </li>
                                 <li class="footer-list"><a href="Appliances.html" class="footer-link">Appliances</a>
                                 </li>
-                                <li class="footer-list"><a href="contact.html" class="footer-link">Contact</a></li>
+                                <li class="footer-list"><a href="#top" class="footer-link">Contact</a></li>
                             </ul>
                         </div>
                         <div class="col-12 col-lg-5 col-md-5 footer-container">
