--- a/shop.html
+++ b/shop.html
@@ -354,8 +354,8 @@
                         <i class="fa-solid fa-user nav-icons p-2" id="user"> </i>
                             <div class="link" id="login">
                                 <ul class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="#" class="login-link">Login</a></li>
-                                    <li class="breadcrumb-item text-light"> <a href="#" class="login-link">Sign In</a>
+                                    <li class="breadcrumb-item"><a href="login.html" class="login-link">Login</a></li>
+                                    <li class="breadcrumb-item text-light"> <a href="sign-up.html" class="login-link">Sign In</a>
                                     </li>
                                 </ul>
                             </div>
@@ -486,9 +486,9 @@
                         <div class="col-12 col-lg-2 col-md-2 fs-md-5 footer-container">
                             <h3 class=" text-capitalize  footer-header">Menu</h3>
                             <ul>
-                                <li class="footer-list footer-list2"><a href="shop.html" class="footer-link">Shop</a>
+                                <li class="footer-list footer-list2"><a href="#top" class="footer-link">Shop</a>
                                 </li>
-                                <li class="footer-list"><a href="#top" class="footer-link">Mobile</a></li>
+                                <li class="footer-list"><a href="Mobile.html" class="footer-link">Mobile</a></li>
                                 <li class="footer-list"><a href="Computers.html" class="footer-link">Computers</a></li>
                                 <li class="footer-list"><a href="Accessories.html" class="footer-link">Accessories</a>
                                 </li>
