--- a/sign-up.html
+++ b/sign-up.html
@@ -10,16 +10,22 @@
     crossorigin="anonymous"></script>
   <title>Sign up</title>
   <style>
-    body {
+     body{
+      margin: 0px;
+      padding: 0px;
+    }
+    section{
       background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(0, 0%, 0%, 0.791));
       display: flex;
       justify-content: center;
+      height:700px;
       align-items: center;
-      flex-direction:column;
+      flex-direction: column;
     }
+
       .login-text {
       font-size: 33px;
-      margin: 40px 0px;
+      margin: 30px 0px;
       font-weight: bold;
     }
     .login-container {
@@ -96,6 +102,7 @@
   </style>
 </head>
 <body>
+ <section>
   <h2 class="login-text">Signup</h2>
   <div class="container login-container">
     <div class="button-container">
@@ -113,5 +120,6 @@
       <button class="signup">Signup</button>
     </form>
   </div>
+ </section>
 </body>
 </html>
