--- a/Mobile.html
+++ b/Mobile.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/693dd61249.js" crossorigin="anonymous"></script>
     <style>
         * {
             margin: 0PX;
@@ -113,13 +114,23 @@
             width: 100%;
         }
 
-        .img-item {
-            height: 480px;
+        /* .img-item {
+            height: auto;
+            object-fit: cover;
             width: 100%;
             border-radius: 10px;
             border: 5px solid orange;
             background-color: hsla(0, 0%, 100%, 0.59);
+        } */
+        .img-item {
+            height: 350px;
+            width: 100%;
+            object-fit: cover;
+            border-radius: 10px;
+            border: 5px solid orange;
+            background-color: hsla(0, 0%, 100%, 0.59);
         }
+
 
         .img-item:hover {
             transform: scale(102%);
@@ -362,10 +373,10 @@
                 <div class="container-fliud">
                     <div class="row mx-md-1 content-container">
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4 mt-4 link-container">
-                            <ul class="breadcrumb">
+                            <!-- <ul class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="index.html" class=" main-link-header">Home</a></li>
                                 <li class="breadcrumb-item text-light">Cell Phones</li>
-                            </ul>
+                            </ul> -->
                             <ul>
                                 <li class="main-list mt-5"><a href="Mobile.html" class="main-links moblie">Mobile</a>
                                 </li>
@@ -381,38 +392,37 @@
                                 <span class="fs-4 text-light">No produts</span>
                                 <div class="row">
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/redmi.html"> <img src="image/redmi.jpg" class="img-item"
+                                        <a href="/each-products/redmi.html"> <img src="image/oppo amy special.jpg" class="img-item"
                                                 alt=""></a>
                                         <div>
                                             <h2 class="text-light">ipone</h2>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/oppo.html"> <img src="image/oppo.jpg" class="img-item"
-                                                alt=""></a>
+                                        <a href="/each-products/oppo.html"> <img src="image/oppo.jpg" class="img-item" alt=""></a>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <a href="/each-products/samsung.html"> <img src="images/samsung.jpg"
                                                 class="img-item" alt=""></a>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/samsung2.html"><img src="image/i (1).jpeg"
+                                        <a href="/each-products/samsung2.html"><img src="image/mobiles (1).jpg"
                                                 class="img-item" alt=""></a>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/nokia-11.html"> <img src="image/nokia 11pro.jpg"
+                                        <a href="/each-products/nokia-11.html"> <img src="image/mobile-phone.jpg"
                                                 class="img-item" alt=""></a>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/oppox7.html"> <img src="image/oppo x7.jpg"
+                                        <a href="/each-products/oppox7.html"> <img src="image/mobiles (1).jpg"
                                                 class="img-item" alt=""></a>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/samsungx9.html"> <img src="image/i (2).jpeg"
+                                        <a href="/each-products/samsungx9.html"> <img src="image/mobiles (2).jpg"
                                                 class="img-item" alt=""></a>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/nokia.html"> <img src="image/nokia.jpg" class="img-item"
+                                        <a href="/each-products/nokia.html"> <img src="image/mobiles (2).jpg" class="img-item"
                                                 alt=""></a>
                                     </div>
 
