--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 
         .img-items {
             height: 390px;
+            object-fit: cover;
             border-radius: 5px;
             width: 100%;
             border: 3px solid orange;
@@ -139,7 +140,8 @@
         }
 
         .phone-img {
-            height: 580px;
+            height: auto;
+            object-fit: cover;
             border-radius: 5px;
             box-shadow: 5px 8px 15px rgb(61, 61, 61);
             margin: 10px 0px 30px 0px;
@@ -156,6 +158,7 @@
         .laptop-background {
             margin-top: 30px;
             height: 600px;
+            object-fit: cover;
             width: 100%;
             object-fit: cover;
             filter: brightness(110%);
