--- a/login.html
+++ b/login.html
@@ -11,17 +11,22 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <style>
-    body {
+    body{
+      margin: 0px;
+      padding: 0px;
+    }
+    section{
       background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(0, 0%, 0%, 0.791));
       display: flex;
       justify-content: center;
+      height:700px;
       align-items: center;
       flex-direction: column;
     }
 
     .login-text {
       font-size: 33px;
-      margin: 40px 0px;
+      margin: 30px 0px;
       font-weight: bold;
     }
 
@@ -117,6 +122,7 @@
 </head>
 
 <body>
+ <section>
   <h2 class="login-text">Login</h2>
   <div class="container login-container">
     <div class="button-container">
@@ -135,6 +141,7 @@
       <p class="Signup">Not a member? <span><a href="sign-up.html">Signup now</a></span></p>
     </form>
   </div>
+ </section>
 </body>
 
 </html>
