--- a/Accessories.html
+++ b/Accessories.html
@@ -96,8 +96,9 @@
         }
 
         .img-item {
-            height: 390px;
+            height: 350px;
             width: 100%;
+            object-fit: cover;
             border-radius: 10px;
             border: 5px solid orange;
             background-color: hsla(0, 0%, 100%, 0.59);
@@ -216,7 +217,7 @@
 
         @media (max-width:500px) {
             .img-item {
-                height: 400px;
+                height: 250px;
             }
 
         }
@@ -237,7 +238,7 @@
             }
 
             .img-item {
-                height: 350px;
+                height: 200px;
             }
 
             .footer-list {
