--- a/Computers.html
+++ b/Computers.html
@@ -95,15 +95,14 @@
         .main-link-header:hover {
             color: orange;
         }
-
         .img-item {
-            height: 450px;
+            height: 350px;
             width: 100%;
+            object-fit: cover;
             border-radius: 10px;
             border: 5px solid orange;
             background-color: hsla(0, 0%, 100%, 0.59);
         }
-
         .img-item:hover {
             transform: scale(102%);
             transition-duration: 1s;
@@ -217,7 +216,7 @@
 
         @media (max-width:500px) {
             .img-item {
-                height: 400px;
+                height: 250px;
             }
 
         }
@@ -238,7 +237,7 @@
             }
 
             .img-item {
-                height: 350px;
+                height: 200px;
             }
 
             .footer-list {
