--- a/index.html
+++ b/index.html
@@ -426,6 +426,12 @@
             .footer-list2 {
                 margin-top: 12px;
             }
+
+        .copy-right-box {
+            height: 80px;
+            margin-top: 30px;
+            margin-left:10px;
+        }
         }
 
     </style>
